--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "BSD-III",
   "private": true,
   "scripts": {
-    "dev": "nodemon ./src/index.ts"
+    "dev": "nodemon ./src/index.ts",
+    "migrate": "prisma migrate dev"
   },
   "dependencies": {
     "@types/cors": "^2.8.12",
