--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "private": true,
   "scripts": {
     "dev": "nodemon ./src/index.ts",
-    "migrate": "prisma migrate dev"
+    "migrate": "prisma migrate dev",
+    "build": "npx tsc"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
@@ -25,6 +27,8 @@
   },
   "devDependencies": {
     "@prisma/client": "^3.14.0",
+    "@types/node": "^17.0.36",
+    "bcrypt": "^5.0.1",
     "prisma": "^3.14.0",
     "typescript": "^4.7.2"
   }
