--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expenses-ts",
   "version": "1.0.0",
-  "description": "Expenses app for ABhijith",
+  "description": "Expenses app for Abhijith",
   "main": "index.js",
   "author": "AbhijithGanesh",
   "license": "BSD-III",
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-oas-generator": "^1.0.41",
     "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.16",
@@ -28,8 +29,10 @@
   "devDependencies": {
     "@prisma/client": "^3.14.0",
     "@types/node": "^17.0.36",
+    "@types/uuid": "^8.3.4",
     "bcrypt": "^5.0.1",
     "prisma": "^3.14.0",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "uuid": "^8.3.2"
   }
 }
